[gd_scene load_steps=5 format=3 uid="uid://bslwv18vvfyn8"]

[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://theme/kenneyUI-green.tres" id="1_lti8b"]
[ext_resource type="Script" uid="uid://b77yfq0juriqb" path="res://scenes/menu.gd" id="1_mae5d"]
[ext_resource type="Texture2D" uid="uid://xkoi31cotn2m" path="res://assets/game_background.jpg" id="1_ouk20"]
[ext_resource type="AudioStream" uid="uid://bfmwgenmjuitp" path="res://addons/kenney_interface_sounds/click_001.wav" id="4_4hy44"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mae5d")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.009
offset_right = 1.0
offset_bottom = 0.221985
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ouk20")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -198.0
offset_right = 82.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lti8b")
theme_override_constants/separation = 28

[node name="Ball1" type="Button" parent="Buttons"]
layout_mode = 2
text = "Ball 1"

[node name="Ball2" type="Button" parent="Buttons"]
layout_mode = 2
text = "Ball 2"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
text = "QUIT
"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4hy44")

[connection signal="pressed" from="Buttons/Ball1" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Ball2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Ball2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_button_3_pressed"]
